<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:overScrollMode="never"
    android:scrollbars="none">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_banner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,2:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/black"
            tools:ignore="ContentDescription" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white_70_percent"
            app:layout_constraintStart_toStartOf="@id/product_banner"
            app:layout_constraintEnd_toEndOf="@id/product_banner"
            app:layout_constraintTop_toTopOf="@id/product_banner"
            app:layout_constraintBottom_toBottomOf="@id/product_banner"/>

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="?attr/homeAsUpIndicator"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@id/product_banner"
            app:layout_constraintTop_toTopOf="@id/product_banner"
            tools:ignore="ContentDescription,RtlSymmetry" />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_share_24"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/product_banner"
            app:layout_constraintTop_toTopOf="@id/product_banner"
            tools:ignore="ContentDescription,RtlSymmetry" />

        <androidx.cardview.widget.CardView
            android:id="@+id/image_card_view_container"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@id/product_banner"
            app:layout_constraintEnd_toEndOf="@id/product_banner"
            app:layout_constraintStart_toStartOf="@id/product_banner"
            app:layout_constraintTop_toTopOf="@id/product_banner">
            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@color/black"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@id/like_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/like_icon"
            app:layout_constraintTop_toTopOf="@id/like_icon"
            tools:text="Title"
            android:textSize="@dimen/font_20"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:ignore="SpUsage" />
        <ImageView
            android:id="@+id/like_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_baseline_favorite_24"
            app:layout_constraintTop_toBottomOf="@id/product_banner"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/product_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_15"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/like_icon"
            tools:text="Description"
            tools:ignore="SpUsage" />
        <Button
            android:id="@+id/buy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="@id/product_banner"
            app:layout_constraintTop_toBottomOf="@id/product_description"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="$100"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            android:textSize="@dimen/font_15"
            app:layout_constraintEnd_toStartOf="@id/buy_button"
            app:layout_constraintTop_toTopOf="@id/buy_button"
            app:layout_constraintBottom_toBottomOf="@id/buy_button"
            tools:ignore="SpUsage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

