<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:fitsSystemWindows="true">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            android:background="@color/white"
            app:contentScrim="@android:color/transparent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <ImageView
                    android:id="@+id/icon_heart"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    app:layout_constraintBottom_toBottomOf="@id/search_box"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_favorite_24"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/search_box"
                    style="@style/FormEditTextStyle"
                    android:background="@drawable/background_search_box"
                    android:layout_width="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    tools:ignore="Autofill,LabelFor"
                    app:layout_constraintBottom_toTopOf="@id/category_recyclerview"
                    app:layout_constraintStart_toEndOf="@id/icon_heart"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:drawableLeftCompat="@drawable/ic_baseline_search_24" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/category_recyclerview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    tools:listitem="@layout/category_item"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_box"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/HorizontalRecyclerView"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/product_recycler_view"
            style="@style/VerticalRecycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/product_item"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>