<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_navigation"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/feed_navigation"
        android:icon="@drawable/ic_outline_dynamic_feed_24"
        android:title="@string/feed" />

    <item
        android:id="@+id/cart_navigation"
        android:icon="@drawable/ic_outline_shopping_cart_24"
        android:title="@string/cart" />

    <item
        android:id="@+id/profile_navigation"
        android:icon="@drawable/ic_outline_supervised_user_circle_24"
        android:title="@string/profile" />

</menu>